--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li>Въведение в SQL.</li>
             </ol>
         </li>
-        <li id="MySQL_Intro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Intro/MySQL_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Да започнем с MySQL - администриране на потребители и бази данни.</span><span class="hours">4</span></h3>
+        <li id="MySQL_Users_and_DB_admin"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Users_and_DB_admin/MySQL_Users_and_DB_admin.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Да започнем с MySQL - администриране на потребители и бази данни.</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>DataBase: Show, Create, Drop, Use.</li>
                 <li>Users: Create, Drop, Grant privileges.</li>
