--- a/pages/themes/beginners/MySQL_Indexes/MySQL_Indexes.html
+++ b/pages/themes/beginners/MySQL_Indexes/MySQL_Indexes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Insert,delete,update data</title>
+    <title>MySQL_Indexes</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
-        <a class="home_link" href="../../../agenda/beginners.html#Insert_delete_update_data.html" target="_top"><i class="fa fa-home"></i></a>
+        <a class="home_link" href="../../../agenda/beginners.html#MySQL_Indexes" target="_top"><i class="fa fa-home"></i></a>
         <div class="footer theme_switch">
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/white.css'); return false;">White</a>
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/league.css'); return false;">League</a>
@@ -52,7 +52,7 @@
 ##################### SLIDES START #####################
 ########################################################
 -->
-<section><h1>Insert, delete and update data in tables.</h1></section>
+<section><h1>MySQL Indexes</h1></section>
 <section data-transition="zoom">
     <div class="copyright">
         <div class="note">
@@ -70,153 +70,137 @@
     </div>
 </section>
 
-<section><h2>INSERT INTO table</h2>
-    <section><h3>The syntax</h3>
-        <pre><code>
-INSERT INTO table_name [(column, ...)]
-VALUES (value, ...)[, (...), ...];
-        </code></pre>
+<section id="intro"><h2>Introduction</h2>
+    <section><h3>What and Why?</h3>
         <dl class="fa">
-            <dt>Column list is optional!</dt>
-                <dd>If not present, you should list in VALUES values for all columns, following the order in table definition.</dd>
-            <dt>You can insert more than 1 row at a time, by using a list of values arrays.</dt>
+           <dt>A database index is added to a table <span class="note">to speed up the search</span> operation.</dt>
+           <dt>An index is used by the Database Search Engine to locate records very fast.</dt>
+           <dt>Indexes can be created for one or more columns.</dt>
+           <dt>Indexes are implemented as a type of tables, which keep index field and a pointer to each record into the actual table.</dt>
+           <dt>While adding index to a table will speed the SELECT queries, it will <span class="note">slow down</span> the INSERT and UPDATE statement.</dt>
         </dl>
     </section>
-    <section><h3>Examples</h3>
-        <p>Without specifying columns</p>
-        <pre><code>
-INSERT INTO artist
-VALUES (0,'Robert', 'Smith');
-        </code>
-Query OK, 1 row affected
-        </pre>
-        <p>But:</p>
-        <pre><code>
-INSERT INTO artist
-VALUES ('Madonna');
-        </code>
-(1136, u"Column count doesn't match value count at row 1")
-        </pre>
-        <p>With explicit column specification</p>
-        <pre><code>
-INSERT INTO artist(lname)
-VALUES ('Piazzolla');
-        </code>
-Query OK, 1 row affected
-        </pre>
-    </section>
-    <section><h3>Examples</h3>
-         <p>Insert more than 1 row at a time</p>
-        <pre><code>
-INSERT INTO artist( lname, fname )
-VALUES ( 'Schnittke', 'Alfred' ),
-       ( 'Pärt', 'Arvo' ),
-       ( 'Shostakovich', 'Dmitri' );
-        </code>
-Query OK, 3 rows affected
-        </pre>
-    </section>
-</section>
-<section><h2>Delete</h2>
-    <section><h3>The Syntax</h3>
-        <pre><code>
-DELETE FROM table_name
-[WHERE where_condition]
-[ORDER BY ...]
-[LIMIT row_count]
-        </code></pre>
+    <section><h3>Types of indexes</h3>
         <dl class="fa">
-            <dt>The conditions in the optional WHERE clause identify which rows to delete. With no WHERE clause, <span class="note">all rows are deleted</span>.</dt>
-            <dt>The LIMIT clause places a limit on the number of rows that can be deleted.</dt>
-            <dt>If the ORDER BY clause is specified, the rows are deleted in the order that is specified.</dt>
+            <dt>A regular INDEX</dt>
+            <dt>PRIMARY KEY</dt>
+            <dt>FULLTEXT</dt>
         </dl>
     </section>
-    <section><h3>Examples</h3>
+</section>
+<section id="regular_indexes"><h2>Regular index</h2>
+    <section><h3>Considerations</h3>
+        <dl class="fa">
+            <dt>Consider data in which columns will be searched most often.</dt>
+        </dl>
+    </section>
+    <section id="add_index"><h3>Add regular Index to a table</h3>
+        <p>The syntax:</p>
         <pre><code>
-delete from artist WHERE
-    artist_id BETWEEN 9 AND 13;
-        </code>
-Query OK, 5 rows affected
+ALTER TABLE table_name ADD INDEX(column_name(index_length));
+        </code></pre>
+        <dl class="fa">
+            <dt>The <span class="code">index_length</span> could be specified to minimize the size of the index, and to optimize database access speed.</dt>
+        <dt>If <span class="code">index_length</span> is specified, it should be long enough, because if MySQL finds two indexes with the same contents, it will have to waste time going to the table itself and checking the column that was indexed to find out which rows really matched.</dt>
+        </dl>
+    </section>
+    <section id="add_index_example"><h3>Example</h3>
+        <p>Let's have the <span class="code">artist</span> table, defined as:</p>
+        <pre>
+mysql music_db_admin@localhost:music_db> desc artist;
++---------+-------------+--------+-------+-----------+---------+
+| Field   | Type        | Null   | Key   |   Default | Extra   |
+|---------+-------------+--------+-------+-----------+---------|
+| fname   | varchar(20) | YES    |       |    &lt;null&gt; |         |
+| lname   | varchar(20) | NO     |       |    &lt;null&gt; |         |
++---------+-------------+--------+-------+-----------+---------+
         </pre>
+        <p>An index could be added as:</p>
+        <pre><code>
+ALTER TABLE artist ADD INDEX(lname(10));
+        </code></pre>
+        <p>Resulting in:</p>
+        <pre>
+mysql music_db_admin@localhost:music_db> desc artist;
++---------+-------------+--------+-------+-----------+---------+
+| Field   | Type        | Null   | Key   |   Default | Extra   |
+|---------+-------------+--------+-------+-----------+---------|
+| fname   | varchar(20) | YES    |       |    &lt;null&gt; |         |
+| lname   | varchar(20) | NO     | <span class="note">MUL</span>   |    &lt;null&gt; |         |
++---------+-------------+--------+-------+-----------+---------+
+        </pre>
+        <p>The <span class="note">MUL</span> key means that multiple occurrences of a value may occur within that column.</p>
+    </section>
+    <section id="create_index"><h3>Using CREATE INDEX</h3>
+        <p>The syntax:</p>
+        <pre><code>
+CREATE INDEX column_name ON table_name (column_name(index_length));
+        </code></pre>
+        <dl class="fa">
+            <dt>It is an alternative to adding an index with ALTER TABLE.</dt>
+            <dt><span class="note">NB!</span> They are equivalent, except that CREATE INDEX cannot be used to create a PRIMARY KEY</dt>
+        </dl>
+    </section>
+    <section id="on_create_table"><h3>Adding indexes when creating tables</h3>
+        <p>You should be aware that adding an index to a large table can take a very long time.</p>
+        <p>That's why is better to add the index when creating the table!</p>
+        <pre><code>
+CREATE TABLE artist (
+    fname VARCHAR(20) DEFAULT NULL,
+    lname VARCHAR(20) NOT NULL,
+    INDEX(lname(10))
+);
+        </code></pre>
     </section>
 </section>
+<section id="primary_key"><h2>Primary key</h2>
+    <section><h3>Why?</h3>
+        <p>Regular indexes do not impose the values to be unique!</p>
+        <p>The importance of having a key with a unique value for each row will come up when we start to combine data from different tables.</p>
+    </section>
+    <section id="primary_key_create"><h3>Create</h3>
+        <p>By adding the PRIMARY KEY(column_name) at the end of CREATE TABLE.</p>
+        <pre><code>
+CREATE TABLE artist (
+    id MEDIUMINT(4) NOT NULL AUTO_INCREMENT,
+    fname VARCHAR(20) DEFAULT NULL,
+    lname VARCHAR(20) NOT NULL,
+    PRIMARY KEY(id)
+);
+        </code></pre>
+        <p>Resulting in:</p>
+        <pre>
++---------+--------------+--------+-------+-----------+----------------+
+| Field   | Type         | Null   | Key   |   Default | Extra          |
+|---------+--------------+--------+-------+-----------+----------------|
+| id      | mediumint(4) | NO     | PRI   |    &lt;null&gt; | auto_increment |
+| fname   | varchar(20)  | YES    |       |    &lt;null&gt; |                |
+| lname   | varchar(20)  | NO     |       |    &lt;null&gt; |                |
++---------+--------------+--------+-------+-----------+----------------+
+        </pre>
+        <p><span class="note">NB!</span> As PRIMARY KEY requires unique values, the <span class="code">NOT NULL</span> and/or <span class="code">AUTO_INCREMENT</span> attribute should be present.</p>
+    </section>
+    <section id="primary_key_create"><h3>Create - alternative notation</h3>
 
-<section><h2>Update</h2>
-    <section><h3>The Syntax</h3>
+    </section>
+</section>
+<section id="auto_increment"><h2>The AUTO_INCREMENT attribute</h2>
+    <section id="auto_increment"><h3>The AUTO_INCREMENT attribute</h3>
+        <dl class="fa">
+            <dt>The AUTO_INCREMENT attribute can be used to generate a unique identity for new rows.</dt>
+            <dt>A column defined with that attribute will set the value of its contents to that of the column entry in the previously inserted row, plus 1.</dt>
+        </dl>
+    </section>
+    <section id="auto_increment"><h3>AUTO_INCREMENT - example</h3>
         <pre><code>
-UPDATE table_name
-SET column1=value, column2=value2,...
-[WHERE where_clause]
-[ORDER BY ...]
-[LIMIT row_count]
+CREATE TABLE artist (
+  artist_id SMALLINT(5) NOT NULL AUTO_INCREMENT KEY,
+  fname VARCHAR(20) DEFAULT NULL,
+  lname VARCHAR(20) NOT NULL
+);
         </code></pre>
-        <dl class="fa">
-        <dt>The WHERE clause, if given, specifies the conditions that identify which rows to update</dt>
-            <dd>With no WHERE clause, all rows are updated!</dd>
-        <dt>If the ORDER BY clause is specified, the rows are updated in the order that is specified.</dt>
-        <dt>The LIMIT clause places a limit on the number of rows that can be updated.</dt>
-        </dl>
-    </section>
-    <section><h3>Examples</h3>
-    <pre><code>
-UPDATE artist
-SET fname='Test', lname='Test'
-WHERE artist_id >= 14;
-    </code>
-Query OK, 2 rows affected
-    </pre>
-    </section>
-</section>
-<section><h2>Reference</h2>
-    <p>Check <a href="http://dev.mysql.com/doc/refman/5.7/en/comparison-operators.html">Comparison Functions and Operators</a> to use them in <span class="impotant">WHERE Clause</span></p>
-</section>
-<section>
-    <section>
-        <h2>Exercises</h2>
-    </section>
-    <section>
-        <ol class="fs-small">
-            <li>CONNECT TO MySQL as ROOT</li>
-            <li>CRETE DB: <span class="note">books_db</span></li>
-            <li>CREATE <span class="note">books_db_admin</span></li>
-            <li>GRANT admin privileges to <span class="note">books_db_admin</span> on <span class="note">books_db</span></li>
-            <li>CONNECT to <span class="note">books_db</span> as <span class="note">books_db_admin</span></li>
-        </ol>
-    </section>
-    <section>
-        <ol start="6">
-            <li>Create next tables, using the appropriate data types for columns:
-            <dd>table <span class="note">author</span>:</dd>
-            <pre class="fs-smaller">
-Columns:
---------------------------------
-id (primary key, auto_increment)
-fname,
-lname,
-birth_year,
-death_year;
-            </pre>
-            <dd>table <span class="note">book</span>:</dd>
-            <pre class="fs-smaller">
-Columns:
---------------------------------
-id (primary key, auto_increment)
-author_id,
-book_name,
-pub_year;
-            </pre>
-            </li>
-        </ol>
-        <p><span class="note">If you need to store years less than 1900, you have to use some integer type for that - SMALLINT(4) should be enough for most cases</span>.</p>
-    </section>
-    <section>
-        <dl class="fa">
-            <dt>You can examine the sample DataBase <span class="note">books_db</span>:</dt>
-            <dd>Download the <a href="slides_examples/books_db_schema.sql">books_db_schema.sql</a></dd>
-            <dd>Download the <a href="slides_examples/books_db_sample_data.sql">books_db_sample_data.sql</a></dd>
-            <dd>Execute the SQL statements by using one of the approaches described in <a href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Users_and_DB_admin/MySQL_Users_and_DB_admin.html#load_external_sql">MySQL_Users_and_DB_admin.html (load_external_sql)</a></dd>
-            <dt>Use the 'INSERT', 'UPDATE' and 'DELETE' statements to modify the data in the example (or in your) data base.</dt>
-        </dl>
+        <p><span class="note">The KEY attribute should also be defined!</span></p>
+        <p>If it is not present, MySQL raises an error: <span class="code">'Incorrect table definition; there can be only one auto column and it must be defined as a key'</span>.</p>
     </section>
 </section>
 
@@ -250,7 +234,7 @@ pub_year;
             // minScale: .5,
             maxScale: 1,
             // slide transition
-            transition: 'slide', // none/fade/slide/convex/concave/zoom
+            transition: 'concave', // none/fade/slide/convex/concave/zoom
             // Factor of the display size that should remain empty around the content
             margin: 0.1,
             // shift+maous click to zoom in/out element
