--- a/pages/themes/beginners/MySQL_Users_and_DB_admin/MySQL_Users_and_DB_admin.html
+++ b/pages/themes/beginners/MySQL_Users_and_DB_admin/MySQL_Users_and_DB_admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Insert,delete,update data</title>
+    <title>MySQL_Users_and_DB_admin</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -26,15 +26,20 @@
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
     <!-- CUSTOM -->
-    <!-- CUSTOM -->
     <link rel="stylesheet" href="/ProgressBG-MySQL/outfit/css/reveal.js.css">
     <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/custom_hljs.css">
     <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/common/themes/MatDes/text_schemes.css">
+    <style type="text/css">
+        .slides section pre>code{
+            font-size: 1.5em;
+            line-height: 1.5em;
+        }
+    </style>
     <base target="_blank">
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
-        <a class="home_link" href="../../../agenda/beginners.html#Insert_delete_update_data.html" target="_top"><i class="fa fa-home"></i></a>
+        <a class="home_link" href="../../../agenda/beginners.html#MySQL_Users_and_DB_admin" target="_top"><i class="fa fa-home"></i></a>
         <div class="footer theme_switch">
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/white.css'); return false;">White</a>
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/league.css'); return false;">League</a>
@@ -52,7 +57,7 @@
 ##################### SLIDES START #####################
 ########################################################
 -->
-<section><h1>Insert, delete and update data in tables.</h1></section>
+<section><h1>Let's start using MySQL</h1></section>
 <section data-transition="zoom">
     <div class="copyright">
         <div class="note">
@@ -69,153 +74,102 @@
         </div>
     </div>
 </section>
-
-<section><h2>INSERT INTO table</h2>
-    <section><h3>The syntax</h3>
+<section id="Manage_databases"><h2>Manage databases</h2>
+    <section><h3>List All Databases</h3>
         <pre><code>
-INSERT INTO table_name [(column, ...)]
-VALUES (value, ...)[, (...), ...];
+SHOW DATABASES;
         </code></pre>
+        <p class="note">Lists only those databases for which the user have some kind of privilege (or if the user have the global SHOW DATABASES privilege).</p>
+    </section>
+    <section><h3>Create DB</h3>
+        <pre><code>
+CREATE DATABASE music_db;
+        </code></pre>
+    </section>
+    <section><h3>Delete a Database</h3>
+        <pre><code>
+DROP DATABASE music_db;
+        </code></pre>
+    </section>
+    <section><h3>Selecting a Database</h3>
+        <pre><code>
+USE music_db;
+        </code></pre>
+        <p>Before performing any table manipulations, you need to select the database on which they will be performed.</p>
+    </section>
+</section>
+<section id="Manage_users"><h2>Manage users</h2>
+    <section><h3>Create a New User</h3>
+        <pre><code>
+CREATE USER 'music_db_admin'@'localhost' IDENTIFIED BY '1234';
+        </code></pre>
+        <p>If user exists, an error will be thrown.</p>
+    </section>
+    <section><h3>Delete user</h3>
+        <pre><code>
+DROP USER 'music_db_admin'@'localhost';
+        </code></pre>
+        <p>If user did not exists, an error will be thrown.</p>
+    </section>
+    <section><h3>User privileges types</h3>
         <dl class="fa">
-            <dt>Column list is optional!</dt>
-                <dd>If not present, you should list in VALUES values for all columns, following the order in table definition.</dd>
-            <dt>You can insert more than 1 row at a time, by using a list of values arrays.</dt>
+            <dt>ALL PRIVILEGES- this would allow a MySQL users all access to a designated database (or if no database is selected, across the system)</dt>
+            <dt>CREATE- allows them to create new tables or databases</dt>
+            <dt>DROP- allows them to them to delete tables or databases</dt>
+            <dt>DELETE- allows them to delete rows from tables</dt>
+            <dt>INSERT- allows them to insert rows into tables</dt>
+            <dt>SELECT- allows them to use the Select command to read through databases</dt>
+            <dt>UPDATE- allow them to update table rows</dt>
+            <dt>GRANT OPTION- allows them to grant or remove other users' privileges</dt>
         </dl>
     </section>
-    <section><h3>Examples</h3>
-        <p>Without specifying columns</p>
+    <section><h3>Grant privileges to a user</h3>
+        <code>
+GRANT [type of permission]
+    ON [database name].[table name]
+    TO ‘[username]’@'host’;</code>
+        <p></p>
         <pre><code>
-INSERT INTO artist
-VALUES (0,'Robert', 'Smith');
-        </code>
-Query OK, 1 row affected
-        </pre>
-        <p>But:</p>
-        <pre><code>
-INSERT INTO artist
-VALUES ('Madonna');
-        </code>
-(1136, u"Column count doesn't match value count at row 1")
-        </pre>
-        <p>With explicit column specification</p>
-        <pre><code>
-INSERT INTO artist(lname)
-VALUES ('Piazzolla');
-        </code>
-Query OK, 1 row affected
-        </pre>
+GRANT ALL PRIVILEGES ON music_db.* TO 'music_db_admin'@'localhost';
+        </code></pre>
     </section>
-    <section><h3>Examples</h3>
-         <p>Insert more than 1 row at a time</p>
+    <section><h3>Revoke privileges</h3>
+        <pre><code>REVOKE [type of permission] ON [database name].[table name] FROM ‘[username]’@‘localhost’;</code></pre>
+    </section>
+    <section><h3>Reload all the privileges</h3>
+        <p>Always be sure to reload all the privileges.</p>
         <pre><code>
-INSERT INTO artist( lname, fname )
-VALUES ( 'Schnittke', 'Alfred' ),
-       ( 'Pärt', 'Arvo' ),
-       ( 'Shostakovich', 'Dmitri' );
-        </code>
-Query OK, 3 rows affected
-        </pre>
+FLUSH PRIVILEGES;
+        </code></pre>
+    </section>
+    <section><h3>Show all users</h3>
+        <pre><code>
+SELECT user FROM mysql.user;
+        </code></pre>
     </section>
 </section>
-<section><h2>Delete</h2>
-    <section><h3>The Syntax</h3>
-        <pre><code>
-DELETE FROM table_name
-[WHERE where_condition]
-[ORDER BY ...]
-[LIMIT row_count]
-        </code></pre>
+<section><h2>Exercises</h2>
+    <section><h3>Create DB schema dumped in external file</h3>
         <dl class="fa">
-            <dt>The conditions in the optional WHERE clause identify which rows to delete. With no WHERE clause, <span class="note">all rows are deleted</span>.</dt>
-            <dt>The LIMIT clause places a limit on the number of rows that can be deleted.</dt>
-            <dt>If the ORDER BY clause is specified, the rows are deleted in the order that is specified.</dt>
+        <dt>Create a simple DB: music_db, using the SQL statements provided in the file <a href="code/music_db_schema.sql">music_db_schema.sql</a>.</dt>
+            <dd>You can use the MySQL Workbench to execute the statements by: <code>'File' => 'Run SQL script...' and selecting the 'music_db_schema.sql' file you have downloaded</code>.
+            </dd>
         </dl>
     </section>
-    <section><h3>Examples</h3>
-        <pre><code>
-delete from artist WHERE
-    artist_id BETWEEN 9 AND 13;
-        </code>
-Query OK, 5 rows affected
-        </pre>
-    </section>
-</section>
-
-<section><h2>Update</h2>
-    <section><h3>The Syntax</h3>
-        <pre><code>
-UPDATE table_name
-SET column1=value, column2=value2,...
-[WHERE where_clause]
-[ORDER BY ...]
-[LIMIT row_count]
-        </code></pre>
+    <section><h3>Create users</h3>
         <dl class="fa">
-        <dt>The WHERE clause, if given, specifies the conditions that identify which rows to update</dt>
-            <dd>With no WHERE clause, all rows are updated!</dd>
-        <dt>If the ORDER BY clause is specified, the rows are updated in the order that is specified.</dt>
-        <dt>The LIMIT clause places a limit on the number of rows that can be updated.</dt>
+            <dt>Create user <span class="note">music_db_admin</span> with full privileges on <span class="note">music_db</span>.</dt>
+            <dt>Create user <span class="note">music_db_editor</span> who will be able <u>only</u> to read, insert and update the content of all tables in <span class="note">music_db</span>.</dt>
+            <dt>Create user <span class="note">music_db_reader</span> who will be able <u>only</u> to read, the content of all tables in <span class="note">music_db</span>.</dt>
         </dl>
     </section>
-    <section><h3>Examples</h3>
-    <pre><code>
-UPDATE artist
-SET fname='Test', lname='Test'
-WHERE artist_id >= 14;
-    </code>
-Query OK, 2 rows affected
-    </pre>
-    </section>
-</section>
-<section><h2>Reference</h2>
-    <p>Check <a href="http://dev.mysql.com/doc/refman/5.7/en/comparison-operators.html">Comparison Functions and Operators</a> to use them in <span class="impotant">WHERE Clause</span></p>
-</section>
-<section>
-    <section>
-        <h2>Exercises</h2>
-    </section>
-    <section>
-        <ol class="fs-small">
-            <li>CONNECT TO MySQL as ROOT</li>
-            <li>CRETE DB: <span class="note">books_db</span></li>
-            <li>CREATE <span class="note">books_db_admin</span></li>
-            <li>GRANT admin privileges to <span class="note">books_db_admin</span> on <span class="note">books_db</span></li>
-            <li>CONNECT to <span class="note">books_db</span> as <span class="note">books_db_admin</span></li>
-        </ol>
-    </section>
-    <section>
-        <ol start="6">
-            <li>Create next tables, using the appropriate data types for columns:
-            <dd>table <span class="note">author</span>:</dd>
-            <pre class="fs-smaller">
-Columns:
---------------------------------
-id (primary key, auto_increment)
-fname,
-lname,
-birth_year,
-death_year;
-            </pre>
-            <dd>table <span class="note">book</span>:</dd>
-            <pre class="fs-smaller">
-Columns:
---------------------------------
-id (primary key, auto_increment)
-author_id,
-book_name,
-pub_year;
-            </pre>
-            </li>
-        </ol>
-        <p><span class="note">If you need to store years less than 1900, you have to use some integer type for that - SMALLINT(4) should be enough for most cases</span>.</p>
-    </section>
-    <section>
+    <section><h3>Connect to MySQL server with different user</h3>
         <dl class="fa">
-            <dt>You can examine the sample DataBase <span class="note">books_db</span>:</dt>
-            <dd>Download the <a href="slides_examples/books_db_schema.sql">books_db_schema.sql</a></dd>
-            <dd>Download the <a href="slides_examples/books_db_sample_data.sql">books_db_sample_data.sql</a></dd>
-            <dd>Execute the SQL statements by using one of the approaches described in <a href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Users_and_DB_admin/MySQL_Users_and_DB_admin.html#load_external_sql">MySQL_Users_and_DB_admin.html (load_external_sql)</a></dd>
-            <dt>Use the 'INSERT', 'UPDATE' and 'DELETE' statements to modify the data in the example (or in your) data base.</dt>
+            <dt>Connect to MySQL server as <span class="important">music_db_admin</span></dt>
+                <dd>Try to execute the statements learned in <a href="#Manage_tables">Manage tables section</a> and <a href="#Manage_databases">Manage databases section</a></dd>
+            <dt>Connect to MySQL server as <span class="important">music_db_editor</span> or <span class="important">music_db_reader</span></dt>
+                <dd>Try to execute the statements learned in <a href="#Manage_tables">Manage tables section</a> and <a href="#Manage_databases">Manage databases section</a></dd>
+            <dt>Write down what the MySQL server response to each of your commands.</dt>
         </dl>
     </section>
 </section>
