--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -48,11 +48,18 @@
                 <li>Въведение в SQL.</li>
             </ol>
         </li>
-        <li id="MySQL_Intro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Intro/MySQL_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Да започнем с MySQL - администриране на потребители и бази данни.</span><span class="hours">4</span></h3>
+        <li id="MySQL_Users_and_DB_admin"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Users_and_DB_admin/MySQL_Users_and_DB_admin.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Да започнем с MySQL - администриране на потребители и бази данни.</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>DataBase: Show, Create, Drop, Use.</li>
                 <li>Users: Create, Drop, Grant privileges.</li>
-                <li>Tables: Create, Show, Describe, Alter.</li>
+            </ol>
+        </li>
+        <li id="MySQL_Tables_Manipulations"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Tables_Manipulations/MySQL_Tables_Manipulations.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">MySQL - операции с таблици.</span><span class="hours">2</span></h3>
+            <ol class="iep_syllabus_sub_themes">
+                <li>Create Table - simple syntax</li>
+                <li>Show Table</li>
+                <li>Describe Table</li>
+                <li>Alter Table</li>
             </ol>
         </li>
         <li id="MySQL_Data_Types"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Data_Types/MySQL_Data_Types.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Типове данни в MySQL.</span><span class="hours">2</span></h3>
@@ -75,7 +82,18 @@
 
             </ol>
         </li>
-        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Ограничаване на стойностите на данните в таблиците на RDBMS посредством първичен ключ (primary key),външен ключ  (foreign key) и връзка между отделните таблици</span><span class="hours">2</span></h3>
+        <li id="MySQL_Indexes"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Indexes/MySQL_Indexes.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Индекси в MySQL</span><span class="hours">2</span></h3>
+            <ol class="iep_syllabus_sub_themes">
+                <li></li>
+            </ol>
+        </li>
+        <li id="MySQL_Foreign_Key"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Foreign_Key/MySQL_Foreign_Key.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Връзка между отделните таблици. Външен ключ (foreign key)</span><span class="hours">2</span></h3>
+            <ol class="iep_syllabus_sub_themes">
+                <li>One-to-One relation</li>
+                <li>One-to-Many relation</li>
+            </ol>
+        </li>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Ограничаване на стойностите на данните в таблиците на RDBMS посредством първичен ключ (primary key)</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
