--- a/pages/themes/beginners/MySQL_Tables_Manipulations/MySQL_Tables_Manipulations.html
+++ b/pages/themes/beginners/MySQL_Tables_Manipulations/MySQL_Tables_Manipulations.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Insert,delete,update data</title>
+    <title>MySQL_Tables_Manipulations</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -26,15 +26,20 @@
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
     <!-- CUSTOM -->
-    <!-- CUSTOM -->
     <link rel="stylesheet" href="/ProgressBG-MySQL/outfit/css/reveal.js.css">
     <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/custom_hljs.css">
     <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/common/themes/MatDes/text_schemes.css">
+    <style type="text/css">
+        .slides section pre>code{
+            font-size: 1.5em;
+            line-height: 1.5em;
+        }
+    </style>
     <base target="_blank">
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
-        <a class="home_link" href="../../../agenda/beginners.html#Insert_delete_update_data.html" target="_top"><i class="fa fa-home"></i></a>
+        <a class="home_link" href="../../../agenda/beginners.html#MySQL_Users_and_DB_admin" target="_top"><i class="fa fa-home"></i></a>
         <div class="footer theme_switch">
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/white.css'); return false;">White</a>
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/league.css'); return false;">League</a>
@@ -52,7 +57,7 @@
 ##################### SLIDES START #####################
 ########################################################
 -->
-<section><h1>Insert, delete and update data in tables.</h1></section>
+<section><h1>MySQL Tables Manipulations</h1></section>
 <section data-transition="zoom">
     <div class="copyright">
         <div class="note">
@@ -70,153 +75,156 @@
     </div>
 </section>
 
-<section><h2>INSERT INTO table</h2>
-    <section><h3>The syntax</h3>
+<section id="create_table"><h2>Create table</h2>
+    <section><h3>The minimal syntax</h3>
         <pre><code>
-INSERT INTO table_name [(column, ...)]
-VALUES (value, ...)[, (...), ...];
+CREATE TABLE table_name(
+    column_name1 data_type,
+    column_name2 data_type,
+    ....
+);
         </code></pre>
-        <dl class="fa">
-            <dt>Column list is optional!</dt>
-                <dd>If not present, you should list in VALUES values for all columns, following the order in table definition.</dd>
-            <dt>You can insert more than 1 row at a time, by using a list of values arrays.</dt>
-        </dl>
+        <p>Column names should not be MySQL <a href="https://dev.mysql.com/doc/refman/5.6/en/keywords.html" class="note">reserved words</a>. If you really want to use them (which is a <span class="note">bad practice</span>), you have to put them in backticks(``)</p>
     </section>
-    <section><h3>Examples</h3>
-        <p>Without specifying columns</p>
+    <section><h3>Create table - example</h3>
         <pre><code>
-INSERT INTO artist
-VALUES (0,'Robert', 'Smith');
-        </code>
-Query OK, 1 row affected
-        </pre>
-        <p>But:</p>
-        <pre><code>
-INSERT INTO artist
-VALUES ('Madonna');
-        </code>
-(1136, u"Column count doesn't match value count at row 1")
-        </pre>
-        <p>With explicit column specification</p>
-        <pre><code>
-INSERT INTO artist(lname)
-VALUES ('Piazzolla');
-        </code>
-Query OK, 1 row affected
-        </pre>
+CREATE TABLE artist (
+  artist_id SMALLINT(5) NOT NULL DEFAULT 0,
+  fname VARCHAR(20) DEFAULT NULL,
+  lname VARCHAR(20) NOT NULL,
+  PRIMARY KEY  (artist_id)
+);
+        </code></pre>
+        <p>Results in:</p>
+        <pre><code class="basic">
+Query OK, 0 rows affected
+Time: 0.280s
+        </code></pre>
+        <p>If table exists an error will be thrown!</p>
     </section>
-    <section><h3>Examples</h3>
-         <p>Insert more than 1 row at a time</p>
+    <section><h3>Show CREATE TABLE</h3>
         <pre><code>
-INSERT INTO artist( lname, fname )
-VALUES ( 'Schnittke', 'Alfred' ),
-       ( 'Pärt', 'Arvo' ),
-       ( 'Shostakovich', 'Dmitri' );
+show CREATE TABLE artist\G
         </code>
-Query OK, 3 rows affected
+'\G' modifier is used instead of ';' to display wide results in vertical form
         </pre>
+        <p>Results in:</p>
+        <pre><code>
+***************************[ 1. row ]***************************
+Table        | artist
+Create Table | CREATE TABLE `artist` (
+  `artist_id` smallint(5) NOT NULL DEFAULT '0',
+  `fname` varchar(20) DEFAULT NULL,
+  `lname` varchar(20) NOT NULL,
+  PRIMARY KEY (`artist_id`)
+) ENGINE=InnoDB DEFAULT CHARSET=latin1
+        </code></pre>
+        <p>This allows us to see the create statement that MySQL engine had used. It shows even the default options, which we did not state explicitly.</p>
     </section>
 </section>
-<section><h2>Delete</h2>
-    <section><h3>The Syntax</h3>
-        <pre><code>
-DELETE FROM table_name
-[WHERE where_condition]
-[ORDER BY ...]
-[LIMIT row_count]
-        </code></pre>
-        <dl class="fa">
-            <dt>The conditions in the optional WHERE clause identify which rows to delete. With no WHERE clause, <span class="note">all rows are deleted</span>.</dt>
-            <dt>The LIMIT clause places a limit on the number of rows that can be deleted.</dt>
-            <dt>If the ORDER BY clause is specified, the rows are deleted in the order that is specified.</dt>
-        </dl>
-    </section>
-    <section><h3>Examples</h3>
-        <pre><code>
-delete from artist WHERE
-    artist_id BETWEEN 9 AND 13;
-        </code>
-Query OK, 5 rows affected
-        </pre>
-    </section>
-</section>
-
-<section><h2>Update</h2>
-    <section><h3>The Syntax</h3>
-        <pre><code>
-UPDATE table_name
-SET column1=value, column2=value2,...
-[WHERE where_clause]
-[ORDER BY ...]
-[LIMIT row_count]
-        </code></pre>
-        <dl class="fa">
-        <dt>The WHERE clause, if given, specifies the conditions that identify which rows to update</dt>
-            <dd>With no WHERE clause, all rows are updated!</dd>
-        <dt>If the ORDER BY clause is specified, the rows are updated in the order that is specified.</dt>
-        <dt>The LIMIT clause places a limit on the number of rows that can be updated.</dt>
-        </dl>
-    </section>
-    <section><h3>Examples</h3>
+<section><h2>List All Tables</h2>
     <pre><code>
-UPDATE artist
-SET fname='Test', lname='Test'
-WHERE artist_id >= 14;
-    </code>
-Query OK, 2 rows affected
-    </pre>
+SHOW TABLES;
+    </code></pre>
+    <p>Results in:</p>
+    <pre><code>
++----------------------+
+| Tables_in_music_db   |
+|----------------------|
+| artist               |
++----------------------+
+    </code></pre>
+</section>
+<section><h2>Show Table Structure</h2>
+        <pre><code>
+DESC artist;
+        </code></pre>
+        <p>Results in:</p>
+        <pre><code>
++-----------+-------------+--------+-------+-----------+---------+
+| Field     | Type        | Null   | Key   |   Default | Extra   |
+|-----------+-------------+--------+-------+-----------+---------|
+| artist_id | smallint(5) | NO     | PRI   |         0 |         |
+| fname     | varchar(20) | YES    |       |    &lt;null&gt; |         |
+| lname     | varchar(20) | NO     |       |    &lt;null&gt; |         |
++-----------+-------------+--------+-------+-----------+---------+
+        </code></pre>
+    </section>
+<section><h2>Delete a Table</h2>
+    <pre><code>
+DROP TABLE artist;
+    </code></pre>
+    <p>If table do not exists, an error is thrown:</p>
+    <pre><code>
+ERROR 1051 (42S02): Unknown table 'music_db.artist'
+    </code></pre>
+</section>
+<section><h2>Alter tables</h2>
+    <section><h3>Add column</h3>
+        <pre><code>
+ALTER TABLE table_name
+  ADD new_column_name column_definition
+  [ FIRST | AFTER column_name ]; # optional
+        </code></pre>
+        <pre><code>
+ALTER TABLE artist
+    ADD birth_date TINYINT
+    AFTER lname;
+        </code></pre>
+    </section>
+    <section><h3>Remove column</h3>
+        <pre><code>
+ALTER TABLE artist DROP birth_date;
+        </code></pre>
     </section>
 </section>
-<section><h2>Reference</h2>
-    <p>Check <a href="http://dev.mysql.com/doc/refman/5.7/en/comparison-operators.html">Comparison Functions and Operators</a> to use them in <span class="impotant">WHERE Clause</span></p>
-</section>
-<section>
-    <section>
-        <h2>Exercises</h2>
-    </section>
-    <section>
-        <ol class="fs-small">
-            <li>CONNECT TO MySQL as ROOT</li>
-            <li>CRETE DB: <span class="note">books_db</span></li>
-            <li>CREATE <span class="note">books_db_admin</span></li>
-            <li>GRANT admin privileges to <span class="note">books_db_admin</span> on <span class="note">books_db</span></li>
-            <li>CONNECT to <span class="note">books_db</span> as <span class="note">books_db_admin</span></li>
-        </ol>
-    </section>
-    <section>
-        <ol start="6">
-            <li>Create next tables, using the appropriate data types for columns:
-            <dd>table <span class="note">author</span>:</dd>
-            <pre class="fs-smaller">
-Columns:
---------------------------------
-id (primary key, auto_increment)
-fname,
-lname,
-birth_year,
-death_year;
-            </pre>
-            <dd>table <span class="note">book</span>:</dd>
-            <pre class="fs-smaller">
-Columns:
---------------------------------
-id (primary key, auto_increment)
-author_id,
-book_name,
-pub_year;
-            </pre>
-            </li>
-        </ol>
-        <p><span class="note">If you need to store years less than 1900, you have to use some integer type for that - SMALLINT(4) should be enough for most cases</span>.</p>
-    </section>
-    <section>
+<section><h2>Exercises</h2>
+    <section><h3>Create DB schema dumped in external file</h3>
         <dl class="fa">
-            <dt>You can examine the sample DataBase <span class="note">books_db</span>:</dt>
-            <dd>Download the <a href="slides_examples/books_db_schema.sql">books_db_schema.sql</a></dd>
-            <dd>Download the <a href="slides_examples/books_db_sample_data.sql">books_db_sample_data.sql</a></dd>
-            <dd>Execute the SQL statements by using one of the approaches described in <a href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Users_and_DB_admin/MySQL_Users_and_DB_admin.html#load_external_sql">MySQL_Users_and_DB_admin.html (load_external_sql)</a></dd>
-            <dt>Use the 'INSERT', 'UPDATE' and 'DELETE' statements to modify the data in the example (or in your) data base.</dt>
+        <dt>Create a simple DB: music_db, using the SQL statements provided in the file <a href="code/music_db_schema.sql">music_db_schema.sql</a>.</dt>
+            <dd>You can use the MySQL Workbench to execute the statements by: <code>'File' => 'Run SQL script...' and selecting the 'music_db.sql' file you have downloaded</code>.
+            </dd>
         </dl>
+    </section>
+    <section><h3>Create table as music_db_admin</h3>
+        <dl class="fa">
+            <dt>Reconnect to the <span class="note">music_db</span> as <span class="note">music_db_admin</span> user.</dt>
+            <dt>Create new table <span class="note">producer</span> with following scheme:</dt>
+            <pre><code>
++---------------+-------------+------+-----+---------+
+| Field         | Type        | Null | Key | Default |
++---------------+-------------+------+-----+---------+
+| producer_id   | smallint(5) | NO   | PRI | 0       |
+| artist_id     | smallint(5) | NO   | PRI | 0       |
+| album_id      | smallint(5) | NO   | PRI | 0       |
+| fname         | varchar(20) | YES  |     | NULL    |
+| lname         | varchar(20) | NO   |     | NULL    |
+| current_label | varchar(20) | YES  |     | NULL    |
++---------------+-------------+------+-----+---------+
+            </code></pre>
+        </dl>
+    </section>
+</section>
+<section id="load_external_sql"><h2>Executing SQL Statements stored in external file</h2>
+    <section><h3>While connecting with MySQL client</h3>
+        <pre><code>
+mysql -u user_name -p [db_name] < full_file_name
+        </code></pre>
+        <ul>
+            <li><span class="note">[db_name]</span> is optional (if not set, you'll have to state 'use db_name' later)</li>
+            <li><span class="note">text_file</span> is an ASCII file, which contains SQL statements</li>
+        </ul>
+    </section>
+    <section><h3>In MySQL client</h3>
+        <pre><code>
+mysql> source full_file_name
+        </code></pre>
+    </section>
+    <section><h3>Using MySQL Workbench</h3>
+        <ul>
+            <li><p>Go to <code class="note">'File'</code>=><code class="note">'Run SQL script...'</code> and browse to select the file, which contains the SQL statements you want to execute.</p></li>
+            <li><p>You can do the same by <code class="note">'File'</code>=><code class="note">'Open SQL script...'</code> and execute the statements in Workbench editor.</p></li>
+        </ul>
     </section>
 </section>
 
