--- a/pages/themes/beginners/MySQL_Users_and_DB_admin/MySQL_Users_and_DB_admin.html
+++ b/pages/themes/beginners/MySQL_Users_and_DB_admin/MySQL_Users_and_DB_admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>MySQL_Intro</title>
+    <title>MySQL_Users_and_DB_admin</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
-        <a class="home_link" href="../../../agenda/beginners.html#MySQL_Intro" target="_top"><i class="fa fa-home"></i></a>
+        <a class="home_link" href="../../../agenda/beginners.html#MySQL_Users_and_DB_admin" target="_top"><i class="fa fa-home"></i></a>
         <div class="footer theme_switch">
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/white.css'); return false;">White</a>
             <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/league.css'); return false;">League</a>
@@ -148,112 +148,11 @@ SELECT user FROM mysql.user;
         </code></pre>
     </section>
 </section>
-<section id="Manage_tables"><h2>Manage tables</h2>
-    <section><h3>Create table - minimal syntax</h3>
-        <pre><code>
-CREATE TABLE table_name(
-    column_name1 data_type,
-    column_name2 data_type,
-    ....
-);
-        </code></pre>
-        <p>Column names should not be MySQL <a href="https://dev.mysql.com/doc/refman/5.6/en/keywords.html" class="note">reserved words</a>. If you really want to use them (which is a <span class="note">bad practice</span>), you have to put them in backticks(``)</p>
-    </section>
-    <section><h3>Create table - example</h3>
-        <pre><code>
-CREATE TABLE artist (
-  artist_id SMALLINT(5) NOT NULL DEFAULT 0,
-  fname VARCHAR(20) DEFAULT NULL,
-  lname VARCHAR(20) NOT NULL,
-  PRIMARY KEY  (artist_id)
-);
-        </code></pre>
-        <p>Results in:</p>
-        <pre><code class="basic">
-Query OK, 0 rows affected
-Time: 0.280s
-        </code></pre>
-        <p>If table exists an error will be thrown!</p>
-    </section>
-    <section><h3>List All Tables</h3>
-        <pre><code>
-SHOW TABLES;
-        </code></pre>
-        <p>Results in:</p>
-        <pre><code>
-+----------------------+
-| Tables_in_music_db   |
-|----------------------|
-| artist               |
-+----------------------+
-        </code></pre>
-    </section>
-    <section><h3>Show Table Structure</h3>
-        <pre><code>
-DESC artist;
-        </code></pre>
-        <p>Results in:</p>
-        <pre><code>
-+-----------+-------------+--------+-------+-----------+---------+
-| Field     | Type        | Null   | Key   |   Default | Extra   |
-|-----------+-------------+--------+-------+-----------+---------|
-| artist_id | smallint(5) | NO     | PRI   |         0 |         |
-| fname     | varchar(20) | YES    |       |    &lt;null&gt; |         |
-| lname     | varchar(20) | NO     |       |    &lt;null&gt; |         |
-+-----------+-------------+--------+-------+-----------+---------+
-        </code></pre>
-    </section>
-    <section><h3>Show CREATE TABLE</h3>
-        <pre><code>
-show CREATE TABLE artist\G
-        </code>
-'\G' modifier is used instead of ';' to display wide results in vertical form
-        </pre>
-        <p>Results in:</p>
-        <pre><code>
-***************************[ 1. row ]***************************
-Table        | artist
-Create Table | CREATE TABLE `artist` (
-  `artist_id` smallint(5) NOT NULL DEFAULT '0',
-  `fname` varchar(20) DEFAULT NULL,
-  `lname` varchar(20) NOT NULL,
-  PRIMARY KEY (`artist_id`)
-) ENGINE=InnoDB DEFAULT CHARSET=latin1
-        </code></pre>
-        <p>This allows us to see the create statement that MySQL engine had used. It shows even the default options, which we did not state explicitly.</p>
-    </section>
-    <section><h3>Delete a Table</h3>
-        <pre><code>
-DROP TABLE artist;
-        </code></pre>
-        <p>If table do not exists, an error is thrown:</p>
-        <pre><code>
-ERROR 1051 (42S02): Unknown table 'music_db.artist'
-        </code></pre>
-    </section>
-    <section><h3>Modify a Table - Add a Column</h3>
-        <pre><code>
-ALTER TABLE table_name
-  ADD new_column_name column_definition
-  [ FIRST | AFTER column_name ]; # optional
-        </code></pre>
-        <pre><code>
-ALTER TABLE artist
-    ADD birth_date TINYINT
-    AFTER lname;
-        </code></pre>
-    </section>
-    <section><h3>Modify a Table - Remove a Column</h3>
-        <pre><code>
-ALTER TABLE artist DROP birth_date;
-        </code></pre>
-    </section>
-</section>
 <section><h2>Exercises</h2>
     <section><h3>Create DB schema dumped in external file</h3>
         <dl class="fa">
-        <dt>Create a simple DB: music_db, using the SQL statements provided in the file <a href="code/music_db.sql">music_db.sql</a>.</dt>
-            <dd>You can use the MySQL Workbench to execute the statements by: <code>'File' => 'Run SQL script...' and selecting the 'music_db.sql' file you have downloaded</code>.
+        <dt>Create a simple DB: music_db, using the SQL statements provided in the file <a href="code/music_db_schema.sql">music_db_schema.sql</a>.</dt>
+            <dd>You can use the MySQL Workbench to execute the statements by: <code>'File' => 'Run SQL script...' and selecting the 'music_db_schema.sql' file you have downloaded</code>.
             </dd>
         </dl>
     </section>
@@ -273,48 +172,7 @@ ALTER TABLE artist DROP birth_date;
             <dt>Write down what the MySQL server response to each of your commands.</dt>
         </dl>
     </section>
-    <section><h3>Create table as music_db_admin</h3>
-        <dl class="fa">
-            <dt>Reconnect to the <span class="note">music_db</span> as <span class="note">music_db_admin</span> user.</dt>
-            <dt>Create new table <span class="note">producer</span> with following scheme:</dt>
-            <pre><code>
-+---------------+-------------+------+-----+---------+
-| Field         | Type        | Null | Key | Default |
-+---------------+-------------+------+-----+---------+
-| producer_id   | smallint(5) | NO   | PRI | 0       |
-| artist_id     | smallint(5) | NO   | PRI | 0       |
-| album_id      | smallint(5) | NO   | PRI | 0       |
-| fname         | varchar(20) | YES  |     | NULL    |
-| lname         | varchar(20) | NO   |     | NULL    |
-| current_label | varchar(20) | YES  |     | NULL    |
-+---------------+-------------+------+-----+---------+
-            </code></pre>
-        </dl>
-    </section>
 </section>
-<section id="load_external_sql"><h2>Executing SQL Statements stored in external file</h2>
-    <section><h3>While connecting with MySQL client</h3>
-        <pre><code>
-mysql -u user_name -p [db_name] < full_file_name
-        </code></pre>
-        <ul>
-            <li><span class="note">[db_name]</span> is optional (if not set, you'll have to state 'use db_name' later)</li>
-            <li><span class="note">text_file</span> is an ASCII file, which contains SQL statements</li>
-        </ul>
-    </section>
-    <section><h3>In MySQL client</h3>
-        <pre><code>
-mysql> source full_file_name
-        </code></pre>
-    </section>
-    <section><h3>Using MySQL Workbench</h3>
-        <ul>
-            <li><p>Go to <code class="note">'File'</code>=><code class="note">'Run SQL script...'</code> and browse to select the file, which contains the SQL statements you want to execute.</p></li>
-            <li><p>You can do the same by <code class="note">'File'</code>=><code class="note">'Open SQL script...'</code> and execute the statements in Workbench editor.</p></li>
-        </ul>
-    </section>
-</section>
-
 
 <section data-background="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg">
     <!-- <img class="the_end" src="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg"> -->
