--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -82,7 +82,7 @@
 
             </ol>
         </li>
-        <li id="MySQL_Foreign_Key"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Foreign_Key/MySQL_Foreign_Key.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Връзка между отделните таблици. Външен ключ (foreign key)</span><span class="hours">2</span></h3>
+        <li id="MySQL_Foreign_Key"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Foreign_Key/MySQL_Foreign_Key.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Връзки между отделните таблици. Външен ключ (foreign key). Foreign key constraints.</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>One-to-One relation</li>
                 <li>One-to-Many relation</li>
