--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -48,15 +48,7 @@
                 <li>Въведение в SQL.</li>
             </ol>
         </li>
-<<<<<<< HEAD
-<<<<<<< HEAD
-        <li id="MySQL_Intro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Intro/MySQL_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Основни команди в MySQL за администриране на потребители, бази данни и таблици.</span><span class="hours">4</span></h3>
-=======
-        <li id="MySQL_Intro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Intro/MySQL_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Да започнем с MySQL - администриране на потребители и бази данни.</span><span class="hours">4</span></h3>
->>>>>>> gh-pages
-=======
         <li id="MySQL_Users_and_DB_admin"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Users_and_DB_admin/MySQL_Users_and_DB_admin.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Да започнем с MySQL - администриране на потребители и бази данни.</span><span class="hours">4</span></h3>
->>>>>>> 89efcff... Indexes
             <ol class="iep_syllabus_sub_themes">
                 <li>DataBase: Show, Create, Drop, Use.</li>
                 <li>Users: Create, Drop, Grant privileges.</li>
@@ -75,11 +67,7 @@
                 <li>Numeric Types</li>
                 <li>Date and Time Types</li>
                 <li>String Types</li>
-<<<<<<< HEAD
-                <li>The JSON Data Type</li>
-=======
                 <li>The ENUM Data Type</li>
->>>>>>> gh-pages
             </ol>
         </li>
         <li id="Insert_delete_update_data"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/Insert_delete_update_data/Insert_delete_update_data.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Команди за въвеждане, изтриване, обновяване на данни в таблиците в MySQL</span><span class="hours">2</span></h3>
@@ -89,11 +77,7 @@
                 <li>Delete from table</li>
             </ol>
         </li>
-<<<<<<< HEAD
-        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Команди за въвеждане, изтриване, обновяване на данни в таблиците в MySQL – (insert, update, delete);</span><span class="hours">2</span></h3>
-=======
         <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Извличане на данни от таблици посредством команда (select) и клауза (where)</span><span class="hours">2</span></h3>
->>>>>>> gh-pages
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
@@ -103,7 +87,7 @@
                 <li></li>
             </ol>
         </li>
-        <li id="MySQL_Foreign_Key"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Foreign_Key/MySQL_Foreign_Key.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Връзка между отделните таблици. Външен ключ (foreign key)</span><span class="hours">2</span></h3>
+        <li id="MySQL_Foreign_Key"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/MySQL_Foreign_Key/MySQL_Foreign_Key.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Връзка между отделните таблици. Външен ключ (foreign key).</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
                 <li>One-to-One relation</li>
                 <li>One-to-Many relation</li>
