--- a/pages/themes/beginners/MySQL_Foreign_Key/MySQL_Foreign_Key.html
+++ b/pages/themes/beginners/MySQL_Foreign_Key/MySQL_Foreign_Key.html
@@ -230,6 +230,7 @@ SELECT author.fname, author.lname, book_name FROM book, author WHERE book.author
 </section>
 
 <section id="foreign_key_constraints">
+    <p>Tutorial:</p>
     <a href="http://www.w3schools.com/sql/sql_foreignkey.asp">w3schools: SQL FOREIGN KEY Constraint</a>
 </section>
 <section data-background="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg">
